created header for home page

--- a/index.html
+++ b/index.html
@@ -5,15 +5,54 @@
     <!--required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--bootstrap css-->
+    <!--linking bootstrap cdn css-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!--personal css-->
+    <!--linking personal css-->
     <link rel="stylesheet" href="style.css">
-
+    <!--browser tab title-->
     <title>Yerson Arvelo</title>
 </head>
 
 <body>
-    
+    <!--creating the header section-->
+    <header>
+        <!--full name button-->
+        <!--creating nav bar, using semantic tag nav ***search for other boostrap styles to change look-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+            <!--creating a div to separate the name/button and for styling purposes ***search for other bootstrap styles to change look-->
+            <div class="container px-0">
+                <!--configuring the button to adjust for large screens ***search for other bootstrap styles to change look-->
+                <a class="navbar-brand d-lg-inline-block d-none bg-success p-2 mb-0 rounded text-light h1" href="index.html">Yerson Arvelo</a>
+                <!--configuring the full name button to adjust for small screens ***search for other bootstrap styles to change look-->
+                <a class="navbar-brand d-inline-block d-lg-none bg-success p-2 mb-0 rounded text-light h1" href="index.html">YARV</a>
+
+                <!--button toggle-->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!--navigation buttons and links-->
+                <div class="collapse navbar-collapse" id="navbarSupportedContent"> 
+                    <!--defining list of buttons-->
+                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                        <li class="nav-button">
+                            <a class="nav-link" href="index.html">About</a>
+                        </li>
+                        <li class="nav-button">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-button">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>    
+            </div>
+        </nav>
+    </header>
+
+
+
+
 </body>
+
 </html>
