added responsive image property to index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="text-center">
                         <!--image with semantic tagging-->
                         <figure class="bio-image">
-                            <img src="https://pbs.twimg.com/profile_images/682718281447297028/SSoKdLri.jpg" alt="bio image">
+                            <img src="https://pbs.twimg.com/profile_images/682718281447297028/SSoKdLri.jpg" alt="bio image" class="img-fluid img-thumbnail"> <!--img-fluid makes the image responsive, img-thumbnail allows the image to have borders-->
                         </figure> 
                     </div>
                 </div>
