uploading first draft of portfolio.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <footer class="footer">
         <div class="container-fluid h-25">
             <div class="row">
-                <div class="col-lg-12 bg-secondary border-top border-info border-3 text-center text-bottom pt-3">Code Ninja In Training
+                <div class="col-lg-12 bg-secondary border-top border-info border-3 text-center text-bottom pt-3">© Copyright 2020 Yerson Arvelo
                 </div>
             </div>
         </div>
