created form section in contact.html

--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,28 @@
             
             <hr>
 
+            <form>
+                <div class="form-group">
+                    <label for="fullName">Name</label>
+                    <input type="text" class="form-control" id="Name" placeholder="State Thy Name!">
+                    <small id="nameRemark" class="form-text text-muted">Don't be Shy</small>
+                </div> 
+                <div class="form-group">
+                    <label for="exampleInputEmail">Email Address</label>
+                    <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Where can we reach you?">
+                    <small id="emailConfidentiality" class="form-text text-muted">We don't make $ by distributing your email</small>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea class="form-control" id="Message" rows="4" placeholder="Enter message"></textarea>
+                    <small id="messageRemark" class="form-text text-muted">What's on your mind?</small>
+                </div>
+
+                <button type="submit" class="btn btn-success">Say Hello!</button>
+                <!--ADD MARGIN AT THE BOTTOM OF THE BUTTON TO CREATE SPACE BETWEEN THE BUTTON AND BORDER-->
+            
+            </form>
+
   <!--creating sticky footer-->
   <footer class="footer">
     <div class="container-fluid h-25">
