changed bio text on index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     Hello world! My name is Yerson Arvelo and I'm a current Full Stack Web Development student at Columbia University Coding Bootcamp.  I have a diverse background in client facing and project management roles.  I am learning web development in order to expand my technical skillset and put my problem solving skills into practice.
                 </p>
                 <p class="bio-text-2">
-                    During my free time, I enjoy reading books, learning about sports cars on youtube, working out and brainstorming new business ideas.
+                    During my free time, I enjoy trading stocks, reading books, learning about sports cars on youtube, working out and brainstorming new business ideas.
                 </p>
             </div>
         </div>
