--- a/contact.html
+++ b/contact.html
@@ -87,14 +87,20 @@
             </form>
 
   <!--creating sticky footer-->
-  <footer class="footer">
-    <div class="container-fluid h-25">
-        <div class="row">
-            <div class="col-lg-12 bg-secondary border-top border-info border-3 text-center text-bottom pt-3">© Copyright 2020 Yerson Arvelo
+    <footer class="footer">
+            <div class="container-fluid h-25">
+                <div class="row">
+                    <div class="col-lg-12 bg-secondary border-top border-info border-3 text-center text-bottom pt-3">© Copyright 2020 Yerson Arvelo
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
+
+ <!--adding bootstrap javascript links for button functionality-->
+ <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
