--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <!--required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--linking bootstrap cdn css-->
@@ -22,9 +21,9 @@
             <!--creating a div to separate the name/button and for styling purposes ***search for other bootstrap styles to change look-->
             <div class="container px-0">
                 <!--configuring the button to adjust for large screens ***search for other bootstrap styles to change look-->
-                <a class="navbar-brand d-lg-inline-block d-none bg-success p-2 mb-0 rounded text-light h1" href="index.html">Yerson Arvelo</a>
+                <a class="navbar-brand d-lg-inline-block d-none bg-success text-light" href="index.html">Yerson Arvelo</a>
                 <!--configuring the full name button to adjust for small screens ***search for other bootstrap styles to change look-->
-                <a class="navbar-brand d-inline-block d-lg-none bg-success p-2 mb-0 rounded text-light h1" href="index.html">YARV</a>
+                <a class="navbar-brand d-inline-block d-lg-none bg-success text-light" href="index.html">YARV</a>
 
                 <!--button toggle-->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
