bio image and first paragraph in the same div

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <!--creating the header section-->
     <header>
         <!--full name button-->
-        <!--creating nav bar, using semantic tag nav ***search for other boostrap styles to change look-->
+        <!--creating nav bar, using semantic tag nav
         <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-            <!--creating a div to separate the name/button and for styling purposes ***search for other bootstrap styles to change look-->
+            <!--creating a div to separate the name/button and for styling purposes-->
             <div class="container px-0">
-                <!--configuring the button to adjust for large screens ***search for other bootstrap styles to change look-->
+                <!--configuring the button to adjust for large screens-->
                 <a class="navbar-brand d-lg-inline-block d-none bg-success text-light" href="index.html">Yerson Arvelo</a>
-                <!--configuring the full name button to adjust for small screens ***search for other bootstrap styles to change look-->
+                <!--configuring the full name button to adjust for small screens-->
                 <a class="navbar-brand d-inline-block d-lg-none bg-success text-light" href="index.html">YARV</a>
 
                 <!--button toggle-->
@@ -64,18 +64,16 @@
             <hr>
 
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-md-10">
                     <div class="text-center">
                         <!--image with semantic tagging-->
                         <figure class="bio-image">
                             <img src="https://pbs.twimg.com/profile_images/682718281447297028/SSoKdLri.jpg" alt="bio image" class="img-fluid img-thumbnail"> <!--img-fluid makes the image responsive, img-thumbnail allows the image to have borders-->
                         </figure> 
+                        <!-- had to include the bio image and first paragraph of text in the same container to allow for wrapping around--> 
+                        <p class="bio-text-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, nemo vitae! Nostrum quisquam quod autem amet distinctio tenetur dolore sequi veniam, vero nobis impedit nemo dolor ex dolorum quo minus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, nemo vitae! Nostrum quisquam quod autem amet distinctio tenetur dolore sequi veniam, vero nobis impedit nemo dolor ex dolorum quo minus.</p>
                     </div>
-                </div>
-                <!--RESEARCH HOW TO MAKE TEXT FLOAT AROUND THE IMAGE, MIGHT NEED TO JOIN THE ABOVE FIGURE AND THE BELOW TEXT INTO A SINGLE CONTAINER-->
-                <p class="bio-text-1">
-                    Hello world! My name is Yerson Arvelo and I'm a current Full Stack Web Development student at Columbia University Coding Bootcamp.  I have a diverse background in client facing and project management roles.  I am learning web development in order to expand my technical skillset and put my problem solving skills into practice.
-                </p>
+
                 <p class="bio-text-2">
                     During my free time, I enjoy trading stocks, reading books, learning about sports cars on youtube, working out and brainstorming new business ideas.
                 </p>
