fixing error that took away the navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--creating the header section-->
     <header>
         <!--full name button-->
-        <!--creating nav bar, using semantic tag nav
+        <!--creating nav bar, using semantic tag nav-->
         <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
             <!--creating a div to separate the name/button and for styling purposes-->
             <div class="container px-0">
